# abt2

./: .auth.json  .dockerignore  .env  .env.backup  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  build-docker.sh  build-runtime.sh  check_output.html  config.json  cookies.txt  cookies3.txt  docker-sync.sh  package-lock.json  package.json  regression-session  sync.sh  target.md  task-bus-test.md  task.md  task_upload.md  test-permission.md  uno.config.ts  user_list_fixes.txt
abt/: Cargo.toml
abt-core/: CLAUDE.md  Cargo.toml
abt-core/examples/: gen_hash.rs
abt-core/graphify-out/: GRAPH_REPORT.md  graph.json
abt-core/graphify-out/cache/: stat-index.json
abt-core/migrations/: 001_create_shared_infrastructure.sql  002_create_purchase_tables.sql  002_create_sales_quotation.sql  002_create_wms.sql  003_create_mes.sql  003_create_sales_order.sql  004_create_shipping_request.sql  005_create_sales_return.sql  006_create_reconciliation.sql  007_create_fms.sql  007_create_outsourcing_tables.sql  007_create_qms.sql  008_create_categories.sql  009_create_products.sql  010_create_bom.sql  011_create_customers.sql  012_create_suppliers.sql  013_create_labor_routing.sql  014_create_notification_task.sql  015_add_safety_stock.sql  016_create_product_watchers.sql  017_bom_add_deleted_at.sql  018_create_h3yun_sync_state.sql  020_add_workflow_trigger_event.sql  021_add_missing_indexes.sql  022_sales_order_state_transitions.sql  023_fix_reconciliation_unique_partial.sql  024_bom_state_transitions.sql  025_supplier_add_currency.sql  026_purchase_quotation_initial_state.sql  027_create_production_exceptions.sql  028_customer_add_fields.sql  029_production_receipts_add_deleted_at.sql  030_shipping_draft_support.sql  031_fix_bin_codes_swap_from_zones.sql  032_acquire_channel_enum.sql  033_sales_order_fulfillment.sql  034_demands.sql  035_drop_meta_acquire_channel.sql  036_create_demand_pool_views.sql  (+77 more)
abt-core/src/: lib.rs
abt-core/src/fms/: enums.rs  mod.rs
abt-core/src/gl/: enums.rs  mod.rs
abt-core/src/h3yun/: client.rs  handlers.rs  inventory_sync.rs  mod.rs  models.rs  (+2 more)
abt-grpc/: Cargo.toml  build.rs  config.toml
abt-grpc/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
abt-web/: CLAUDE.md  Cargo.toml  cookies.txt  uno.config.ts
abt-web/sessions/: -GtaS1D2j-G5bwA5_tqacg  0JRVFy2Hk61W3seNUuRfIw  0giRrfpkhF-zDkOaTl51dg  1d-3sElzA3Smir3OAs9owQ  2-YW6DxUNCrmSXXMgeqmoQ  23ZiO6UapYUwylZpthhl1w  4x_CuYEtTUqc3IV2j4vnaQ  8S9C-zMlc5X02av6WKNE1Q  8ZdeFnHHFpql5FBFXBHvHQ  8l9MKfEyz5CWyJU_XBeQ_g  A8U-MziLitkM1zITd5A-DA  AhUbCoFoI4IZSFYZBYWiAQ  DdhRP_nin_WFPhK0k5D1qw  DwoOsnf2F-xAKY-4ei-RFg  EmJiuYlADiWV8QGbdYMVyg  FrC77YqKamFKfhw9HD0YnA  GRijxiT5C0oDLO2rZEHiXA  GvEtTiX6BuF6MjHGO7DcdA  IJmUa1Gw_lAGUKOUM6euDA  Ib46Bx2V_jjGoENJ5FqPxQ  JqqrZ1aXgSVXuIoqkNTK7Q  KlcBvkzKkM7KIi6NLi4sCQ  NM0T-WjFhiG_XeLI484E9g  PNovNL9h6hnBc_5k990ZYg  PvKJrHkfIS1BXIzrFWtvuQ  Qa-bQGlUTO6oZgSrj3atWQ  R7lBJybZRTUL_Xm3L0xIqA  SdYoBBEsz_wn6VonjeLNTg  VK2Dsdzb1jRhcMRsn0gsOA  WIOibVkcUXtl8Ysqq-gG_w  WaL51UaoZkBwXv_nc-8QDQ  YUFS8_7nXx-ep3aUJtg0vg  c9u8s505Meo7crfU9q6hIA  fKemQcMfbNxfqYWv-DfPHg  hXpxO2-jR6BhnHonKlPbQA  hxix_WxRrSlS9wxiC_t1Hw  l3KMNd1L7spYbRDSYbT2jA  lI1017_qRENSChkIHPVVjw  nHpECC1B5wbaaHepsyxevA  oGmgzRAU8JPJ9EHJEHshfA  (+12 more)
abt-web/src/: .trigger-watch.json  errors.rs  lib.rs  main.rs  permissions.rs  state.rs  toast.rs  utils.rs
abt-web/static/: app.css  app.js  base.css  bom-edit.js  cost-drawer.js  dept_list.js  expense-detail.css  misc-request-create.js  order-create.js  order-edit.js  purchase-order-create.js  purchase-quotation-create.js  purchase-return-create.js  reconciliation-create.js  return-create.js  shipping-create.js
abt-web/tests/: ar_ap_flow_e2e.rs  ar_ap_handler_e2e.rs  debug_submit.rs  fms_flow_e2e.rs  gl_flow_e2e.rs  gl_integration_flow_e2e.rs  gl_invoice_flow_e2e.rs  mes_batch.rs  mes_demand_pool.rs  mes_flow_e2e.rs  mes_inspection.rs  mes_order.rs  mes_pages.rs  mes_plan.rs  mes_receipt.rs  mes_routing_price.rs  mes_wc_batch.rs  mes_wo_cancel_pool.rs  om_outsourcing_suggest.rs  purchase_approval_rules.rs  purchase_demand_pool.rs  purchase_flow_e2e.rs  purchase_order.rs  purchase_quotation.rs  purchase_reconciliation.rs  purchase_return.rs  purchase_settings.rs  routing_labor_e2e.rs  sales_to_wms_e2e.rs  seed_10_sales_orders.rs  supplier_price_catalog.rs  wms_flow_e2e.rs  wms_stock_in_issue98.rs
abt-web2/: .env  CLAUDE.md  Cargo.toml  package-lock.json  package.json  uno.config.ts
abt-web2/src/: config.rs  errors.rs  main.rs  state.rs  utils.rs
abt-web2/static/: app.css  base.css  order-create.js  quotation-create.js  return-create.js  shipping-create.js
abt/migrations/: 003_create_warehouse_table.sql  004_create_location_table.sql  005_create_inventory_table.sql  006_create_inventory_log_table.sql  007_add_soft_delete_fields.sql  007_alter_inventory_quantity_to_decimal.sql  008_create_price_log_table.sql  009_remove_labor_process_site_language.sql  010_create_permission_tables.sql  011_alter_decimal_scale_to_6.sql  012_add_department_tables.sql  013_seed_sample_data.sql  014_make_operator_id_nullable.sql  015_auth_system.sql  016_department_resource_access.sql  017_scoped_roles.sql  018_simplify_to_global_roles.sql  019_cleanup_unused_tables.sql  020_remove_non_essential_roles.sql  021_labor_process_redesign.sql  022_rollback_labor_process_redesign.sql  023_create_bom_category_table.sql  024_add_bom_category_to_bom.sql  025_revert_to_flat_labor_process.sql  026_add_labor_process_routing.sql  027_rollback_labor_process_routing.sql  028_add_bom_cost_permission.sql  029_add_bom_draft_status.sql  030_rollback_add_bom_draft_status.sql  031_create_bom_nodes_table.sql  032_rollback_create_bom_nodes_table.sql  033_drop_bom_published_by.sql  034_rollback_drop_bom_published_by.sql  035_add_location_status.sql  036_products_table_redesign.sql  037_rollback_products_table_redesign.sql  038_add_cascade_indexes.sql  039_create_notifications.sql  040_create_product_watchers.sql  041_add_alert_active_to_product_watchers.sql  (+20 more)
abt/src/: lib.rs  permission_cache.rs
(+1910 files in other folders)
