[workspace]
resolver = "3"
members = ["common", "abt", "abt-grpc"]

[workspace.dependencies]
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["indexmap"] }
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "2.0"
sqlx = { version = "0.8", features = ["mysql", "postgres", "runtime-tokio-rustls", "chrono", "macros", "uuid", "rust_decimal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
calamine = "0.32"
rust_xlsxwriter = { version = "0.92", features = ["serde"] }
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"] }
tonic = "0.14"
ulid = { version = "1.2.1", features = ["serde"] }
napi = { version = "3.7.1", features = ["async"] }
napi-derive = "3.4.0"

[profile.release]
lto = true
strip = "symbols"
