[workspace]
resolver = "3"
members = ["common", "abt", "abt-grpc"]

[workspace.dependencies]
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0", features = ["backtrace"] }

sqlx = { version = "0.8", features = ["mysql", "postgres", "runtime-tokio-rustls", "chrono", "macros", "uuid", "rust_decimal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
calamine = "0.32"
rust_xlsxwriter = { version = "0.92", features = ["serde"] }

tonic = "0.14"
tonic-types = "0.14"


[profile.release]
lto = true
strip = "symbols"
