[package]
name = "abt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
common = { path = "../common" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "uuid", "json", "rust_decimal"] }

# Date/time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Decimal numbers
rust_decimal = { workspace = true }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }
