[package]
name = "abt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "uuid", "json", "rust_decimal", "derive"] }

# Date/time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = "2"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# Logging
tracing = { workspace = true }

# Decimal numbers
rust_decimal = { workspace = true }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (H3Yun sync)
reqwest = { version = "0.12", features = ["json"] }

# Excel
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }
