[package]
name = "abt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database - PostgreSQL
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "macros", "uuid", "json", "rust_decimal", "derive"] }

# Date/time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = "2"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# Logging
tracing = { workspace = true }

# Decimal numbers
rust_decimal = { workspace = true }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Excel
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }

# Templating — 打印模板用 minijinja (Jinja2 语法)；unicode feature 支持中文变量名
minijinja = { version = "2.18.0", features = ["unicode"] }
