[package]
name = "abt-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "abt-grpc"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = "0.14"
tonic-reflection = "0.14"
tonic-prost = "0.14"
prost = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# 项目内部
abt = { path = "../abt" }
common = { path = "../common" }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 工具
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Decimal
rust_decimal = "1"
chrono = "0.4"

# Excel handling
calamine = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
