[package]
name = "abt-web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "abt-web"
path = "src/main.rs"

[dependencies]
# Internal
abt-core = { path = "../abt-core" }
abt-macros = { path = "../abt-macros" }


# Web framework
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-routing"] }
maud = { version = "0.27", features = ["axum"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = "0.5"

# Async
tokio = { workspace = true }


# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Auth
tower-sessions = "0.14"
tower-sessions-file-store = "0.2"
time = "0.3"


# Utilities
dotenvy = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = "2"
