[package]
name = "abt-web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "abt-web"
path = "src/main.rs"

[dependencies]
# Internal
abt-core = { path = "../abt-core" }
abt-macros = { path = "../abt-macros" }


# Web framework
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = ["typed-routing"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
maud = { version = "0.27", features = ["axum"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
rcgen = "0.13"
tower = "0.5"

# Async
tokio = { workspace = true }


# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Auth
tower-sessions = "0.14"
tower-sessions-file-store = "0.2"
time = "0.3"


# Utilities
dotenvy = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = "2"
dashmap = "6"
rust_xlsxwriter = { workspace = true }
anyhow = { workspace = true }
headers = "0.4"
