[package]
name = "abt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal crates
common = { path = "../common" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "uuid", "json", "rust_decimal"] }

# Date/time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Excel handling
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }

# Decimal numbers
rust_decimal = { workspace = true }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"



[build-dependencies]
napi-build = "2"


